vest-dsl/test/bad/const_int_value_range2.vest
const FOO: u16 = 65536
